# Hexxagon_game

./: CMakeLists.txt  DostepnePola.cpp  DostepnePola.h  Gra.cpp  Gra.h  Hex.cpp  Hex.h  README.md  Wyniki.cpp  Wyniki.h  main.cpp  najlepszeWyniki  stanOstatniejGry  wszystkieWyniki
